--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -1,7 +1,7 @@
-@use "../../styles/mixins" as mixins;
+@import "../../styles/mixins";
 
 .button {
-  @include mixins.link1;
+  // @include mixins.link2;
 
   display: block;
   border: 0px solid transparent;
@@ -9,5 +9,16 @@
   text-transform: uppercase;
   padding-inline: 0;
 
+  color: $primary-color-200;
+  text-align: right;
+  font-size: 9px;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 1.929px;
+
   cursor: pointer;
+
+  &:hover {
+    color: $primary-color-100;
+  }
 }
