--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -2,6 +2,44 @@
 
 .container {
   position: relative;
+  background-color: lightgray 50%;
+
+  .gradient {
+    position: absolute;
+    width: 100%;
+    height: 50%;
+
+    background: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0.84) 100%
+    );
+    bottom: 0;
+  }
+
+  .desc {
+    @include flexCenter(column);
+    gap: 6px;
+    position: absolute;
+    left: 32px;
+    bottom: 32px;
+
+    width: 246px;
+
+    color: $primary-color-600;
+    line-height: normal;
+    
+    h2 {
+      font-size: 24px;
+      font-weight: 700;
+    }
+
+    p {
+      font-size: 13px;
+      font-weight: 400;
+      opacity: 0.7528;
+    }
+  }
 
   img {
     display: block;
@@ -78,6 +116,10 @@
       grid-row: 497 / span 68; // 497-565
       grid-column: 2/3;
     }
+
+    .desc {
+      gap: 7px;
+    }
   }
 
   @include desktop {
@@ -149,30 +191,5 @@
       grid-row: 211 / span 68; // 211-279
       grid-column: 4 / 5;
     }
-  }
-}
-
-.desc {
-  display: flex;
-  flex-direction: column;
-  gap: 7px;
-  position: absolute;
-  left: 32px;
-  bottom: 32px;
-
-  width: 246px;
-
-  color: $primary-color-600;
-  line-height: normal;
-
-  h2 {
-    font-size: 24px;
-    font-weight: 700;
-  }
-
-  p {
-    font-size: 13px;
-    font-weight: 400;
-    opacity: 0.7528;
   }
 }
