--- a/src/components/Main/main.module.scss
+++ b/src/components/Main/main.module.scss
@@ -3,20 +3,21 @@
 .container {
   display: flex;
   flex-direction: column;
-  // gap: 24px;
+  gap: 24px;
   margin: 24px;
 
   @include tablet {
     display: grid;
+    row-gap: 0;
     column-gap: 40px;
     margin: 40px;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 0.3rem;
+    grid-auto-rows: 5px;
   }
 
   @include desktop {
     margin-inline: 0;
-    margin-bottom: 47px;
+    margin-bottom:0;
     grid-template-columns: repeat(4, 1fr);
   }
 }
