art page layout complete

--- a/src/components/Main/main.module.scss
+++ b/src/components/Main/main.module.scss
@@ -17,7 +17,7 @@
 
   @include desktop {
     margin-inline: 0;
-    margin-bottom:0;
+    margin-bottom:47px;
     grid-template-columns: repeat(4, 1fr);
   }
 }
