--- a/src/components/ArtPage/artpage.module.scss
+++ b/src/components/ArtPage/artpage.module.scss
@@ -17,6 +17,9 @@
 
   .floater {
     @include flexCenter(column);
+    align-items: flex-start;
+    justify-content: center;
+    text-align: left;
 
     position: absolute;
     bottom: -118px;
@@ -101,6 +104,8 @@
       left: unset;
       top: 0;
       right: 0;
+
+    //   max-height: 302px;
     }
     .name {
       padding: 0 0 67px 65px;
@@ -109,7 +114,6 @@
     }
 
     h2 {
-      width: 50%;
       overflow-wrap: break-word;
       font-size: 56px;
       line-height: 64px; /* 114.286% */
@@ -145,11 +149,16 @@
     .floater {
       left: 410px;
       right: unset;
+      max-height: 302px;
+      margin-right: 30px;
     }
 
     .artistImage {
-      margin-left: 95px;
-      margin-top: 258px;
+        margin-left: unset;
+        position: absolute;
+        bottom: -322px;
+        left: 95px;
+
     }
 
     &__desc {
