--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -7,87 +7,12 @@ $primary-color-600: hsla(0, 0%, 100%, 1);
 
 @mixin flexCenter($direction) {
   display: flex;
-  flex-direction: $direction
+  flex-direction: $direction;
 }
 
-@mixin display {
-  color: $primary-color-400;
-  font-size: 200px;
-  font-weight: 700;
-  line-height: 150px;
-}
-
-@mixin heading {
-  color: $primary-color-100;
-  font-weight: 700;
-}
-
-@mixin heading1 {
-  @include heading();
-  font-size: 56px;
-  line-height: 64px;
-}
-
-@mixin heading2 {
-  @include heading();
-  font-size: 24px;
-  line-height: 29px;
-}
-
-@mixin heading3 {
-  @include heading();
-  font-size: 18px;
-  line-height: normal;
-}
-
-@mixin subhead {
-  color: $primary-color-100;
-  font-size: 15px;
-  font-weight: 400;
-  line-height: normal;
-}
-
-@mixin subhead1 {
-  @include subhead();
-  font-size: 15px;
-}
-
-@mixin subhead2 {
-  @include subhead();
-  font-size: 13px;
-}
-
-@mixin link {
-  color: $primary-color-200;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-
-  &:hover {
-    color: $primary-color-100;
-  }
-}
-
-@mixin link1 {
-  @include link();
-  text-align: right;
-  font-size: 12px;
-  letter-spacing: 2.571px;
-}
-
-@mixin link2 {
-  @include link();
-  font-size: 9px;
-  line-height: normal;
-  letter-spacing: 1.929px;
-  text-decoration-line: underline;
-}
-
-@mixin body {
-  color: $primary-color-200;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 28px;
+@mixin maxWidth {
+  margin-inline: auto;
+  width: min(94.5vw, 1360px);
 }
 
 @mixin desktop {
