--- a/src/components/ArtPage/artpage.module.scss
+++ b/src/components/ArtPage/artpage.module.scss
@@ -86,8 +86,20 @@
   }
 
   .link {
-    @include link2;
+    color: $primary-color-200;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+
+    font-size: 9px;
+    line-height: normal;
+    letter-spacing: 1.929px;
+    text-decoration-line: underline;
     text-transform: uppercase;
+
+    &:hover {
+      color: $primary-color-100;
+    }
   }
 
   @include tablet {
@@ -105,7 +117,7 @@
       top: 0;
       right: 0;
 
-    //   max-height: 302px;
+      //   max-height: 302px;
     }
     .name {
       padding: 0 0 67px 65px;
@@ -142,9 +154,11 @@
   }
 
   @include desktop {
+    @include maxWidth;
     @include flexCenter(row);
     gap: 410px;
-    margin: 100px 0 128px;
+    margin-top: 100px;
+    margin-bottom: 128px;
 
     .floater {
       left: 410px;
@@ -154,11 +168,10 @@
     }
 
     .artistImage {
-        margin-left: unset;
-        position: absolute;
-        bottom: -322px;
-        left: 95px;
-
+      margin-left: unset;
+      position: absolute;
+      bottom: -322px;
+      left: 95px;
     }
 
     &__desc {
