--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -1,39 +1,71 @@
 @import "../../styles/mixins";
 
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 17px 24px;
-  
-    &__name {
-      display: flex;
-      flex-direction: column;
-      gap: 9px;
-      color: $primary-color-100;
-  
-      h2 {
-        font-size: 14px;
-        font-weight: 700;
-        line-height: normal;
-      }
-  
-      p {
-        font-size: 10px;
-        font-weight: 400;
-        line-height: normal;
-        opacity: 0.7528;
-      }
-    }
-  
-    &__nextprev {
-      display: flex;
-      gap: 5px;
+.footer {
+  position: relative;
+}
 
-      button {
-        border: none;
-        background-color: inherit;
-        height: 16px;
-      }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 17px 24px;
+
+  &__name {
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+    color: $primary-color-100;
+
+    h2 {
+      font-size: 14px;
+      font-weight: 700;
+      line-height: normal;
+    }
+
+    p {
+      font-size: 10px;
+      font-weight: 400;
+      line-height: normal;
+      color: hsla(0, 0%, 0%, 0.7528);
     }
   }
+
+  &__nextprev {
+    @include flexCenter(row);
+    gap: 8px;
+    cursor: pointer;
+
+
+    button {
+      display: block;
+      border: none;
+      background-color: inherit;
+      cursor: pointer;
+    }
+  }
+
+  @include tablet {
+    padding: 25px 41px;
+
+    &__name {
+      gap: 8px;
+
+      h2 {
+        font-size: 18px;;
+      }
+
+      p {
+        font-style: 13px;
+      }
+    }
+
+    &__nextprev {
+      gap: 25px;
+    }
+  }
+
+  @include desktop {
+    @include maxWidth;
+    padding-inline: 0;
+  }
+}
